Editing META tags

--- a/index.htm
+++ b/index.htm
@@ -4,15 +4,15 @@
 		<title>#Лёшапомоги</title>
 		
 		<meta charset="utf-8">
-		<meta name="description" content="Онлайн справочник">
-		<meta name="keywords" content="онлайн,справочник,помощь,IT,Samsung Galaxy A,телефоны,смартфоны">
+		<meta name="description" content="Онлайн-справочник по функциям Samsung Galaxy A7 2018">
+		<meta name="keywords" content="онлайн,справочник,консультация,помощь,IT,Samsung Galaxy A7 2018,телефоны,смартфоны">
 		<meta name="author" content="Kulikov Alexey, Куликов Алексей">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link rel="stylesheet" href="../styles/style.css" media="all">
 	</head>
 	<body>
-
+		
 		<script src="../scripts/script.js"></script>
 	</body>
 </html>
