Fix and content added
fixed background and added content like header and line

--- a/index.htm
+++ b/index.htm
@@ -9,10 +9,13 @@
 		<meta name="author" content="Kulikov Alexey, Куликов Алексей">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link rel="stylesheet" href="../styles/style.css" media="all">
+		<link rel="stylesheet" href="styles/style.css" media="all">
 	</head>
 	<body>
-		
+		<div id="content">
+			<h1>Лёша, помоги!</h1>
+			<div id="line"></div>
+		</div>
 		<script src="../scripts/script.js"></script>
 	</body>
 </html>
